--- a/sufatong-dal/pom.xml
+++ b/sufatong-dal/pom.xml
@@ -49,11 +49,11 @@
             <version>1.0.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.weidai</groupId>
-            <artifactId>mybatisplugin</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.weidai</groupId>-->
+            <!--<artifactId>mybatisplugin</artifactId>-->
+            <!--<version>1.1.1</version>-->
+        <!--</dependency>-->
         <!--<dependency>-->
         <!--<groupId>com.weidai</groupId>-->
         <!--<artifactId>generator-plugin</artifactId>-->
@@ -77,7 +77,7 @@
                     <dependency>
                         <groupId>com.weidai</groupId>
                         <artifactId>mybatisplugin</artifactId>
-                        <version>1.1.1-SNAPSHOT</version>
+                        <version>1.1.1</version>
                     </dependency>
                 </dependencies>
                 <configuration>
