--- a/sufatong-dal/pom.xml
+++ b/sufatong-dal/pom.xml
@@ -49,11 +49,11 @@
             <version>1.0.4</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.weidai</groupId>-->
-            <!--<artifactId>mybatisplugin</artifactId>-->
-            <!--<version>1.1.1</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.5</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>com.weidai</groupId>-->
         <!--<artifactId>generator-plugin</artifactId>-->
@@ -75,9 +75,9 @@
                 <version>1.3.5</version>
                 <dependencies>
                     <dependency>
-                        <groupId>com.weidai</groupId>
-                        <artifactId>mybatisplugin</artifactId>
-                        <version>1.1.1</version>
+                        <artifactId>sufatong-dal</artifactId>
+                        <groupId>com.legalups.sufatong</groupId>
+                        <version>1.0-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
                 <configuration>
