--- a/sufatong-web/src/main/resources/application.properties
+++ b/sufatong-web/src/main/resources/application.properties
@@ -1,48 +1,10 @@
 #config配置
 sessionKey=authKey
 
-
-
-
-
-
-
-
-
-
-#jdbc-druid
-spring.datasource.name=test
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jjw?useUnicode=true&amp;characterEncoding=UTF8&useSSL=false&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.username=user2
-spring.datasource.password=user2
-# 使用druid数据源
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.filters=stat
-spring.datasource.maxActive=20
-spring.datasource.initialSize=1
-spring.datasource.maxWait=60000
-spring.datasource.minIdle=1
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=select 'x'
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxOpenPreparedStatements=20
-#mybatis
-mybatis.mapperLocations= classpath*:com/legalups/sufatong/dao/mapper/*.xml
-mybatis.typeAliasesPackage= com.legalups.sufatong.model
-
-
-#logging.path=/Users/wyz/Documents/log
-#logging.config=classpath:log4j.properties
-
 ##########################################system###############################
 #app.name=test
 #tomcat端口设置
-server.port=8088
+#server.port=8088
 server.session.timeout=30000
 server.tomcat.max-threads=800
 server.tomcat.uri-encoding=UTF-8
@@ -58,44 +20,17 @@ spring.thymeleaf.prefix=classpath:/static/templates
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
+#mybatis
+mybatis.mapperLocations= classpath*:com/legalups/sufatong/dao/mapper/*.xml
+mybatis.typeAliasesPackage= com.legalups.sufatong.model
+#加密盐
+jasypt.encryptor.password=wyz
+# 默认的profile为dev，其他环境通过指定启动参数使用不同的profile，比如：
+#   测试环境：java -jar my-spring-boot.jar --spring.profiles.active=test
+#   生产环境：java -jar my-spring-boot.jar --spring.profiles.active=prod
 
+spring.profiles.active= dev
 
-
-#dubbo连接配置
-dubbo.application.name=cf-server
-dubbo.registry.protocol=zookeeper
-#dubbo.registry.address=192.168.16.217:2181
-dubbo.registry.address=192.168.20.46:2181
-dubbo.registry.file=${user.home}/.dubbo/sufatong-server.cache
-dubbo.protocol.port=20880
-dubbo.provider.timeout=6000
-dubbo.provider.cluster=failfast
-dubbo.provider.retries=0
-dubbo.consumer.check=false
-dubbo.service.cluster=failfast
-dubbo.service.retries=0
-dubbo.reference.cluster=failfast
-dubbo.reference.retries=0
-
-
-#redis配置
-redis.host=192.168.20.46
-#redis\u7684\u670D\u52A1\u7AEF\u53E3
-redis.port=6379
-#\u5BC6\u7801
-redis.pass=admin
-#\u94FE\u63A5\u6570\u636E\u5E93
-redis.default.db=9
-#\u5BA2\u6237\u7AEF\u8D85\u65F6\u65F6\u95F4\u5355\u4F4D\u662F\u6BEB\u79D2
-redis.timeout=6000
-#\u6700\u5927\u8FDE\u63A5\u6570
-redis.maxActive=300
-#\u6700\u5927\u7A7A\u95F2\u6570
-redis.maxIdle=100
-#\u6700\u5927\u5EFA\u7ACB\u8FDE\u63A5\u7B49\u5F85\u65F6\u95F4
-redis.maxWait=1000
-#\u6307\u660E\u662F\u5426\u5728\u4ECE\u6C60\u4E2D\u53D6\u51FA\u8FDE\u63A5\u524D\u8FDB\u884C\u68C0\u9A8C,\u5982\u679C\u68C0\u9A8C\u5931\u8D25,\u5219\u4ECE\u6C60\u4E2D\u53BB\u9664\u8FDE\u63A5\u5E76\u5C1D\u8BD5\u53D6\u51FA\u53E6\u4E00\u4E2A
-#DBSync.testOnBorrow=true
 
 
 
