--- a/sufatong-web/src/main/resources/application.properties
+++ b/sufatong-web/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 sessionKey=authKey
 
 ##########################################system###############################
+
 #app.name=test
 #tomcat端口设置
 #server.port=8088
@@ -28,6 +29,7 @@ jasypt.encryptor.password=wyz
 # 默认的profile为dev，其他环境通过指定启动参数使用不同的profile，比如：
 #   测试环境：java -jar my-spring-boot.jar --spring.profiles.active=test
 #   生产环境：java -jar my-spring-boot.jar --spring.profiles.active=prod
+#   spring-boot:run -Dspring.profiles.active=pro
 
 spring.profiles.active= dev
 
