--- a/sufatong-web/src/main/resources/application-prod.properties
+++ b/sufatong-web/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ server.port=8083
 spring.datasource.name=test
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jjw?useUnicode=true&amp;characterEncoding=UTF8&useSSL=false&amp;zeroDateTimeBehavior=convertToNull
 spring.datasource.username=user2
-spring.datasource.password=user2
+spring.datasource.password=ENC(I+3N8idcBpAjaaArIsxs9w==)
 # 使用druid数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
